--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -71,3 +71,26 @@ jobs:
         with:
           name: macos-build
           path: build/libgmodTestLib.dylib
+
+  nuget-packer:
+    name: nuget-packer
+
+    runs-on: ubuntu-latest
+
+    needs: [windows-builder, builder, builder]
+
+    steps:
+      - name: Set up dotnet SDK
+        uses: actions/setup-dotnet@v1.5.0
+        with:
+          dotnet-version: '3.1.x'
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: packager/
+
+      - name: Struct of folder
+        run: |
+             cd packager
+             ls -a -R
