--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -77,7 +77,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    needs: [windows-builder, builder, builder]
+    needs: [windows-builder,   linux-builder, builder]
 
     steps:
       - name: Set up dotnet SDK
