--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -80,14 +80,30 @@ jobs:
     needs: [windows-builder,   linux-builder, macos-builder]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.0.0
+
       - name: Set up dotnet SDK
         uses: actions/setup-dotnet@v1.5.0
         with:
           dotnet-version: '3.1.x'
 
-      - name: Download artifacts
+      - name: Download Windows artifact
         uses: actions/download-artifact@v2
         with:
+          name: windows-build
+          path: packager/
+
+      - name: Download Linux artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: linux-build
+          path: packager/
+
+      - name: Download macOS artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: macos-build
           path: packager/
 
       - name: Struct of folder
