--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -106,6 +106,11 @@ jobs:
           name: macos-build
           path: packager/
 
+      - name: Pack project
+        run: |
+             cd packager
+             dotnet pack --output nupkgs
+
       - name: Struct of folder
         run: |
              cd packager
